# Django-Reusable-Comments

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PERFORMANCE.md  PUBLISHING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  setup.cfg  setup.py
.claude/: settings.json
.github/workflows/: test.yml
django_comments/: __init__.py  admin.py  apps.py  cache.py  conf.py  drf_integration.py  exceptions.py  formatting.py  gdpr.py  managers.py  middleware.py  models.py  notifications.py  signals.py  tasks.py  urls.py  utils.py
django_comments/api/: filtersets.py  permissions.py  serializers.py  urls.py  views.py
django_comments/locale/en/LC_MESSAGES/: django.po
django_comments/management/commands/: cleanup_comments.py  enforce_gdpr_retention.py
django_comments/migrations/: 0001_initial.py  0002_add_performance_indexes.py  0002_alter_comment_id_alter_commentflag_id.py  0002_alter_uuidcomment_parent.py  0002_remove_comment_user_url.py  0003_enhance_moderation.py  0003_remove_comment_django_comm_ct_obj_public_idx_and_more.py  0003_uuid primary_keys.py  0004_alter_comment_id_alter_commentflag_id.py  0004_alter_commentflag_user_banneduser_unique_banned_user.py  0005_fix_commentflag_unique_constraint.py  0006_fix_commentflag_unique_constraint.py
django_comments/templates/django_comments/email/: comment_approved.html  comment_rejected.html  comment_reply.html  moderator_flag_notification.html  moderator_notification.html  new_comment.html  user_banned.html  user_unbanned.html
django_comments/templatetags/: comment_tags.py
django_comments/tests/: base.py  conftest.py  factories.py  models.py  settings.py  test_admin.py  test_api.py  test_banned_user.py  test_cache.py  test_cleanup_commands.py  test_cleanup_comments.py  test_comment_flag.py  test_comment_revision.py  test_comments_tags.py  test_drf_integration.py  test_drf_integration_complete.py  test_enforce_gdpr_retention.py  test_filtersets.py  test_formatting.py  test_formatting_complete.py  test_gdpr.py  test_managers.py  test_middleware.py  test_models.py  test_moderation_action.py  test_notifications.py  test_notifications_complete.py  test_permissions.py  test_serializers.py  test_signals.py  test_sort_validation.py  test_spam_and_profanity.py  test_task.py  test_utils.py  test_views.py  urls.py
docs/: advanced_usage.md  api_reference.md  conf.py  configuration.md  contributing.md  index.md  installation.md
