[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-reusable-comments"
version = "1.0.0"
description = "A production-grade reusable Django comments app with REST API, moderation, spam detection, and GDPR compliance"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Ifeanyi Stanley Nnamani", email = "nnamaniifeanyi10@gmail.com"}
]
keywords = ["django", "comments", "rest-framework", "api", "moderation", "spam-detection", "gdpr"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "Django>=3.2",
    "djangorestframework>=3.14.0",
    "django-filter>=23.0",
    "bleach>=6.0.0",
]

[project.optional-dependencies]
markdown = [
    "markdown>=3.4.0",
]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-django>=4.7.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-sugar>=0.9.7",
    "factory-boy>=3.3.0",
    "Faker>=20.0.0",
    "freezegun>=1.4.0",
    "responses>=0.24.0",
    # Code Quality
    "black>=23.0.0",
    "isort>=5.13.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "django-stubs>=4.2.0",
    "djangorestframework-stubs>=3.14.0",
    # Documentation
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    # Development Tools
    "ipython>=8.18.0",
    "ipdb>=0.13.13",
    "django-debug-toolbar>=4.2.0",
    "django-extensions>=3.2.0",
]

[project.urls]
Homepage = "https://github.com/NzeStan/django-reusable-comments"
Documentation = "https://django-reusable-comments.readthedocs.io/"
Repository = "https://github.com/NzeStan/django-reusable-comments"
"Bug Tracker" = "https://github.com/NzeStan/django-reusable-comments/issues"
Changelog = "https://github.com/NzeStan/django-reusable-comments/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["django_comments"]
include-package-data = true

[tool.setuptools.package-data]
django_comments = [
    "locale/**/*",
    "templates/**/*",
    "static/**/*",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "django_comments.tests.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]
python_classes = ["Test*", "*Tests"]
python_functions = ["test_*"]
addopts = "--strict-markers --tb=short"
testpaths = ["django_comments/tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["django_comments"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["django_comments"]
known_django = ["django", "rest_framework"]
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip_glob = ["*/migrations/*"]

[tool.ruff]
target-version = "py38"
line-length = 88
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
    "DTZ",  # flake8-datetimez
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "B905",  # `zip()` without an explicit `strict=` parameter
    "DTZ001", # datetime.datetime() used without tz
]
exclude = [
    ".git",
    ".github",
    "__pycache__",
    "venv",
    ".venv",
    "env",
    ".env",
    "*/migrations/*",
    "build",
    "dist",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"*/tests/*.py" = ["ARG", "E501"]

[tool.ruff.isort]
known-first-party = ["django_comments"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_calls = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "silent"
ignore_missing_imports = true
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "*.tests.*"
disallow_untyped_defs = false

[tool.django-stubs]
django_settings_module = "django_comments.tests.settings"